--- a/html/index.html
+++ b/html/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Migros Money Card Project</title>
 </head>
+
 <body>
 
 
 
-    
-    
+    <script src="../js/MigrosBase.js"></script>
+    <script src="../js/customer.js"></script>
+    <script src="../js/main.js"></script>
 </body>
+
 </html>
